tests/query_errors/pp_unrecognized_token2/error.txt
Error: 
    1 | use foo :: ";
      |            ^^ It looks like you forgot to terminate a string with a closing '"'
    2 |
